--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <header class="animate__animated animate__fadeInLeft">
 
-        <a href="#" class="logo"> <img src="./images/logo-full-color.png" alt=""> </a>
+        <a href="#" class="logo"> <img src="./images/logo__black.png" alt=""> </a>
 
         <nav class="navbar-left">
             <a href="#home">home</a>
@@ -83,12 +83,15 @@
             <h3 class="animate__animated animate__backInLeft wow animate__delay-1s"> i am <span> THANH TIN </span> </h3>
             <p class="info animate__animated animate__backInLeft wow animate__delay-2s"> i want to become front-end developer </p>
             <p class="text animate__animated animate__backInLeft wow animate__delay-3s"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias quidem excepturi natus iste ut. Alias, quod? Earum pariatur obcaecati dolorum! </p>
-            <a href="#about" class="animate__animated animate__backInLeft wow animate__delay-4s  btn">about me</a>
+            <a href="#about" class="animate__animated animate__backInLeft wow animate__delay-4s  btns">about me</a>
         </div>
 
         <div class="image animate__animated animate__fadeInUp animate__delay-2s">
             <img src="images/ava2.png" alt="" class="front-img">
             <!-- <img src="images/pattern.png" alt="" class="back-img"> -->
+            <img src="./images/dc1.png" alt="" class="dc1">
+            <img src="./images/dc2.png" alt="" class="dc2">
+            <img src="./images/dc2.png" alt="" class="dc3">
 
         </div>
 
@@ -105,7 +108,7 @@
         <div class="row-1">
 
             <div class="image">
-                <img src="images/about-img.jpg" alt="">
+                <img src="images/img__infor.jpg" alt="">
             </div>
 
             <div class="content">
@@ -126,8 +129,9 @@
                         <p> <span> live in : </span> Ho Chi Minh City </p>
                     </div>
                 </div>
-                <a href="#" class="btn">download CV</a>
-                <a href="#" class="btn">hire me</a>
+                <a href="#" class="btns">download CV</a>
+                <a href="#" class="btns">hire me</a>
+                <img src="./images/dc2.png" alt="">
             </div>
 
         </div>
@@ -233,78 +237,155 @@
     <!-- about end -->
 
     <!-- experience start  -->
-    <section class="experience" id="experience">
-        <div class="title">
-            <p>Project</p>
+    <section class="project" id="project">
+        <div class="title__header">
+
+            <p>- Project Overview-</p>
         </div>
         <nav>
             <div class="nav nav-tabs mb-3 d-flex justify-content-center" id="nav-tab" role="tablist">
-                <a class="nav-item display-4 nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
-                <a class="nav-item display-4 nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
-                <a class="nav-item display-4 nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
+                <a class="nav-item display-4 nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">All</a>
+                <a class="nav-item display-4 nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Code</a>
+                <a class="nav-item display-4 nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Design</a>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                 <div class="row">
-                    <div class="col-4 p-3">
+                    <div class="col-12 col-sm-12 col-lg-4">
                         <div class="item_content">
                             <img src="./images/g1.jpg" class="w-100" alt="">
                             <div class="title">
                                 <h5>Apologetic robot holding flowers</h5>
                                 <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 p-3">
+                    <div class="col-12 col-sm-12 col-lg-4">
                         <div class="item_content">
                             <img src="./images/g1.jpg" class="w-100" alt="">
                             <div class="title">
                                 <h5>Apologetic robot holding flowers</h5>
                                 <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 p-3">
+                    <div class="col-12 col-sm-12 col-lg-4">
                         <div class="item_content">
                             <img src="./images/g1.jpg" class="w-100" alt="">
                             <div class="title">
                                 <h5>Apologetic robot holding flowers</h5>
                                 <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 p-3">
+                    <div class="col-12 col-sm-12 col-lg-4">
                         <div class="item_content">
                             <img src="./images/g1.jpg" class="w-100" alt="">
                             <div class="title">
                                 <h5>Apologetic robot holding flowers</h5>
                                 <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 p-3">
+                    <div class="col-12 col-sm-12 col-lg-4">
                         <div class="item_content">
                             <img src="./images/g1.jpg" class="w-100" alt="">
                             <div class="title">
                                 <h5>Apologetic robot holding flowers</h5>
                                 <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 p-3">
+                    <div class="col-12 col-sm-12 col-lg-4">
                         <div class="item_content">
                             <img src="./images/g1.jpg" class="w-100" alt="">
                             <div class="title">
                                 <h5>Apologetic robot holding flowers</h5>
                                 <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
-            <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                <div class="row">
+
+                    <div class="col-12 col-sm-12 col-lg-4">
+                        <div class="item_content">
+                            <img src="./images/g1.jpg" class="w-100" alt="">
+                            <div class="title">
+                                <h5>Apologetic robot holding flowers</h5>
+                                <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-lg-4">
+                        <div class="item_content">
+                            <img src="./images/g1.jpg" class="w-100" alt="">
+                            <div class="title">
+                                <h5>Apologetic robot holding flowers</h5>
+                                <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-lg-4">
+                        <div class="item_content">
+                            <img src="./images/g1.jpg" class="w-100" alt="">
+                            <div class="title">
+                                <h5>Apologetic robot holding flowers</h5>
+                                <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+                <div class="row">
+
+                    <div class="col-12 col-sm-12 col-lg-4">
+                        <div class="item_content">
+                            <img src="./images/g1.jpg" class="w-100" alt="">
+                            <div class="title">
+                                <h5>Apologetic robot holding flowers</h5>
+                                <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-lg-4">
+                        <div class="item_content">
+                            <img src="./images/g1.jpg" class="w-100" alt="">
+                            <div class="title">
+                                <h5>Apologetic robot holding flowers</h5>
+                                <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-lg-4">
+                        <div class="item_content">
+                            <img src="./images/g1.jpg" class="w-100" alt="">
+                            <div class="title">
+                                <h5>Apologetic robot holding flowers</h5>
+                                <p>Branding</p>
+                                <button class="btnViewProjects">View</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="./images/project_border.png" alt="" class="project__border__left">
+
         </div>
 
 
@@ -404,7 +485,7 @@
 
                 <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
 
-                <input type="submit" class="btn" value="send message">
+                <input type="submit" class="btns" value="send message">
 
             </form>
 
@@ -412,14 +493,23 @@
                 allowfullscreen="" loading="lazy"></iframe>
 
         </div>
+        <div class="later">
+            <div class="later__left">
+                <p>Thanhk you for reading my portfolio</p>
 
+            </div>
+            <div class="later__right">
+                <p>write by Thanh Tin</p>
+
+            </div>
+        </div>
 
     </section>
 
     <!-- contact end -->
 
     <!-- footer  -->
-    <footer class="footer"> <span> thank you </span> for read my portfolio </footer>
+
 
 
     <!-- custom cursors  -->
